# gifnar-legacy-yew

./: Cargo.toml  index.html  styles.css
src/: main.rs
