[package]
name = "gifnar-legacy-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"

# ✅ add these
js-sys = "0.3"
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = [
  "Window", "Storage",
  "HtmlInputElement", "HtmlTextAreaElement",
  "Document", "Element", "HtmlElement"   # ✅ add these for download_text()
] }